# qt-resource-dumper

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  qt_resource_dumper.cpp
.reuse/: dep5
